<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:key="login_category"
        android:title="@string/pref_cat_login">

        <EditTextPreference
            android:key="user_key"
            android:summary="@string/pref_login_summary"
            android:title="@string/pref_login_title" />

    </PreferenceCategory>

    <Preference
        android:key="login_button"
        android:widgetLayout="@layout/button_settings_login" />

    <PreferenceCategory
        android:key="register_category"
        android:title="@string/pref_cat_register">

        <EditTextPreference
            android:key="user_name"
            android:summary="@string/pref_register_name_summary"
            android:title="@string/pref_register_name_title"
            android:id="@android:id/edit"/>

        <EditTextPreference
            android:key="user_email_address"
            android:summary="@string/pref_register_email_summary"
            android:title="@string/pref_register_email_title"
            android:id="@android:id/edit" />

        <EditTextPreference
            android:key="user_team"
            android:summary="@string/pref_register_team_summary"
            android:title="@string/pref_register_team_title" />

    </PreferenceCategory>

    <Preference
        android:key="register_button"
        android:widgetLayout="@layout/button_settings_register"/>




</PreferenceScreen>
