<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_information"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/title_information" />
        <item
            android:id="@+id/nav_status"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/title_status" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/title_statistics" />
        <item
            android:id="@+id/nav_register"
            android:visible="false"
            android:title="@string/title_register" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/title_settings" />
    </group>
</menu>
