<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="science.credo.credomobiledetektor.fragment.DebugFragment"
    android:weightSum="1">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/statfragment_textview"
        android:layout_width="312dp"
        android:layout_height="41dp"
        android:text="@string/hello_blank_fragment"
        android:layout_weight="0.91" />

    <Button
        android:id="@+id/statfragment_button_gen"
        android:layout_width="196dp"
        android:layout_height="36dp"
        android:text="@string/stats_generate" />

    <Button
        android:id="@+id/statfragment_button_upl"
        android:layout_width="196dp"
        android:layout_height="36dp"
        android:text="@string/stats_upload" />
    <Button
        android:id="@+id/statfragment_button_clrdb"
        android:layout_width="196dp"
        android:layout_height="36dp"
        android:text="@string/stats_clear_db" />

    <Button
        android:id="@+id/statfragment_button_clrcdb"
        android:layout_width="196dp"
        android:layout_height="36dp"
        android:text="@string/stats_clear_cache_db" />
</LinearLayout>
