<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="science.credo.mobiledetector.fragment.CredoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity=""
            android:text="@string/app_title"
            android:textSize="12pt"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textSize="9pt"
            android:typeface="sans"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_homepage"
            android:textSize="9pt"
            android:typeface="sans"
            android:layout_marginTop="20dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="https://credo.science/"
            android:textSize="9pt"
            android:typeface="sans"
            android:autoLink="web"
            android:linksClickable="true"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/go_button"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/button_go_to_experiment"/>

    </LinearLayout>
</ScrollView>
